[package]
name = "async-dispatcher"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "async runtime based on a pluggable dispatcher"

[features]
"macros" = ["async-dispatcher-macros"]

[dependencies]
async-task = "4.7"
futures-lite = "1"
async-dispatcher-macros = { path = "./macros", version = "0.1.0", optional = true }
